--- a/portfolio.html
+++ b/portfolio.html
@@ -64,14 +64,14 @@
 			</div>
 		</div>
 	</div><!--Testimonials-->
-	<div class="testimonials wow fadeInRight">
+	<div class="testimonials">
 		<div class="videocontainer">
 			<video autoplay="" class="video" loop=""><source src="video/video.mp4" type="video/mp4"> <source src="video/video.webm" type="video/webm"></video>
 		</div>
 		<div class="testimonials-head">
 			<h2>Testimonials</h2>
 		</div>
-		<div class="testimonials-img-div wow fadeInRight" data-wow-delay="0.1s">
+		<div class="testimonials-img-div">
 			<div class="testimonials-img">
 				<img alt="person" class="testimonials_img" src="img/test1.jpeg">
 				<p>He is really passionate about his work</p>
