--- a/portfolio.html
+++ b/portfolio.html
@@ -22,7 +22,7 @@
 				<a href="#top"><img alt="logo" id="logo" src="img/male.png"></a>
 			</div>
 			<div class="navbar_links_box">
-				<span class="navbar_links_container"><a class="navbar_links" href="#top" id="home">Home</a></span> <span class="navbar_links_container"><a class="navbar_links" href="#about" id="about_nav">About</a></span> <span class="navbar_links_container"><a class="navbar_links" href="#projects" id="project">Projects</a></span> <span class="navbar_links_container"><a class="navbar_links" href="#contact" id="contact_nav">Contact</a></span>
+				<span class="navbar_links_container"><a class="navbar_links" href="#top" id="home">Home</a></span> <span class="navbar_links_container"><a class="navbar_links" href="#about" id="about_nav">About</a></span> <span class="navbar_links_container"><a class="navbar_links" href="#projects" id="project">Projects</a></span> <span class="navbar_links_container"><a class="navbar_links" href="#footer" id="follow">Follow</a></span>
 			</div>
 		</div>
 	</div><!--Hero Section-->
@@ -116,7 +116,7 @@
 	</div><!--Contact Section-->
 	<!--Footer-->
 	<footer>
-		<div class="footer">
+		<div class="footer" id="footer">
 			<div class="footer_text">
 				<h1 class="p_h2">Follow Me</h1>
 			</div>
